src/objects/Org_Details__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>API__c</fullName>
        <label>API</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>KEY__c</fullName>
        <label>KEY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org__c</fullName>
        <label>Org</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Org Details</label>
</CustomObject>